# Q2_25_Builder_Anubhab

./: .gitignore  README.md
Week 1/Class 2(SPL Metadata & Transfer)/: spl_metadata.ts  spl_transfer.ts
Week 1/Class 3(NFT Mint)/: nft_image.ts  nft_metadata.ts  nft_mint.ts
Week 2/Class 1(Vault Program)/vault/: Anchor.toml
Week 2/Class 2(Escrow Program)/escrow-class/: Anchor.toml
Week 2/Class 2(Escrow Program)/escrow-class/tests/: escrow-class.ts
Week 2/Class 2(Escrow Program)/escrow-practice/: Anchor.toml
Week 2/Class 2(Escrow Program)/escrow-practice/tests/: escrow-anubhab.ts
Week 2/amm/: Anchor.toml
Week 3/marketplace/: Anchor.toml
capstone/Capstone Docs/: Architectural Diagram (ResearchChain).docx  Capstone Pitch.pptx  Capstone Proposal.docx  Capstone Submission(ResearchChain).docx  FAQs.docx  User Story Draft 2.docx
capstone/anchor/: Anchor.toml  package-lock.json  package.json
capstone/anchor/programs/anchor/: Cargo.toml
capstone/anchor/programs/anchor/src/: error.rs  lib.rs
capstone/anchor/programs/anchor/src/instructions/: apply_penalty.rs  close_proposal.rs  create_proposal.rs  fund_proposal.rs  mint_ip_nft.rs  mod.rs  release_funds.rs  submit_milestone.rs  validate_milestone.rs  withdraw_funds.rs
capstone/anchor/programs/anchor/src/state/: contributor.rs  escrow.rs  milestone.rs  mod.rs  proposal.rs  vote.rs
capstone/anchor/tests/: apply_penalty.ts  close_proposal.ts  create_proposal.ts  fund_proposal.ts  mint_ip_nft.ts  release_funds.ts  submit_milestone.ts  validate_milestone.ts  withdraw_funds.ts
(+25 files in other folders)
