[package]
name = "anchor"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]




[dependencies]
# anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
# mpl-token-metadata = { version = "5.1.0", features = [] }
# anchor-spl = "0.31.1"
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl = "0.31.0"
mpl-token-metadata = "5.1.0"


[dev-dependencies]
litesvm = "0.6.1"

# anchor-lang = "0.31.0"


